# poc_keyberon

./: Cargo.toml  README.md
examples/: 理解できない記述が多い.rs
examples/nimbleに寄せたコード/: Cargo.toml  main.rs
examples/one_keyboard/: main.rs
examples/one_keyboardをraspocoで/: main.rs
examples/キーの反応が悪い/: main.rs
examples/キーの反応が悪い2/: main.rs
examples/リポジトリを参考に/: Cargo.toml  layout.rs  main.rs
examples/動かない/: key_setting.rs  main.rs
src/: main.rs
