[package]
edition = "2021"
name = "rust_keyboard"
version = "0.1.0"

[dependencies]
# blink on-board led
embedded-hal = "0.2.7"
rp-pico = "0.6.0"
cortex-m = "0.7.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.2"

# ☝️ + usb-serial-communicator
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"

# rtic
cortex-m-rtic = "1.1.3"
fugit = "0.3.6"

# keyberon
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
rp2040-hal = "0.7.0"
rp2040-monotonic = "1.2.0"

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }